# kohaku

./: .env.sample  .envrc  .gitignore  .gitmodules  .npmrc  .sops.yaml  627-TSE-FCC-PARSER_DECREE_v1.0.txt  627_tse_cli.rs  628-FEC-PARSER_DECREE_v1.0.txt  646-SOLAR-HEART_DECREE_v1.0.txt  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Glosa245Anchor.sol  Makefile  README.md  TODO  TemporalAttestationBridge.sol  UnifiedElectoralAttestationBridge.sol  aetherweave.py  ai_proxy_guard.py  arkhe_agent_google.py  arkhe_android_os.py  arkhe_fhe_adapter.py  arkhe_secops_cli.py  arkhe_z_cli.py  biological_computing_bridge.py  blockchain_z.py  blockchain_z_block_schema.json  bo_gallium_discovery.py  bridge_api.py  build.sh  cohesion_engine.py  commit_msg.txt  consciousness_simulation.py  curvy-plugin.md  decree_schema.json  eip8272_verifier.py  eslint.config.mjs  (+42 more)
PCA-595/: CMakeLists.txt  ConsciousnessCycleAsync.cpp  ConsciousnessCycleAsync.h  test_alignment_client.cpp  test_async_or.cpp  test_phi_meter_iit.cpp
arkhe-cli-windows/: Cargo.toml  PROJECT_MANIFEST.md
arkhe-cli-windows/src/: main.rs
arkhe-cli-windows/src/cli/: commands.rs
arkhe-cli-windows/tests/: ossi_integration_tests.rs
arkhe/pca-595/: AlignmentClient.cpp  AlignmentClient.h  CMakeLists.txt  PCA-595-Integration.h  PCA-595.cpp  PCA-595.h  PhiMeterIIT.cpp  PhiMeterIIT.h
crates/aetherweave-server/: Cargo.toml
crates/aetherweave-server/src/: main.rs
crates/aetherweave-ts/: Cargo.toml
crates/aetherweave-ts/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  maybe_send.rs  sleep.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/benches/: babyjubjub.rs  pedersen.rs
crates/crypto/src/: babyjubjub.rs  lib.rs  mimc.rs  pedersen.rs  poseidon.rs
crates/crypto/src/merkle_tree/: config.rs  hex_u256.rs  merkle_proof.rs  merkle_tree.rs  mod.rs
crates/eip-1193-provider/: Cargo.toml  README.md  build.rs
crates/eip-1193-provider/src/: alloy.rs  client.rs  js.rs  lib.rs  provider.rs  tx_data.rs
crates/eth-rpc/: Cargo.toml  README.md
crates/eth-rpc/src/: alloy_impl.rs  client.rs  lib.rs  tx_data.rs  wasm_impl.rs
crates/kohaku-alloy-ts/: Cargo.toml  build.rs
crates/kohaku-alloy-ts/src/: lib.rs
crates/kohaku-db/: Cargo.toml
crates/kohaku-db/src/: fs.rs  js.rs  lib.rs  memory.rs
crates/poseidon-rust/: Cargo.toml  README.md
crates/poseidon-rust/benches/: poseidon_hash.rs
crates/poseidon-rust/src/: lib.rs  poseidon.rs
crates/poseidon-rust/src/bn254/: circom_t10.rs  circom_t11.rs  circom_t12.rs  circom_t13.rs  circom_t14.rs  circom_t2.rs  circom_t3.rs  circom_t4.rs  circom_t5.rs  circom_t6.rs  circom_t7.rs  circom_t8.rs  circom_t9.rs  parameters.sage.py
crates/prover/: Cargo.toml  README.md
crates/prover/src/: circuit_input.rs  lib.rs  proof.rs  prover.rs  wasm_impl.rs
crates/prover/src/snapshots/: prover__proof__tests__proof_serialization.snap
crates/railgun/: Cargo.toml  README.md  build.rs  justfile
crates/railgun-rs/: Cargo.toml  README.md  justfile  provider_state_11155111.bincode
crates/railgun-rs/benches/: groth16.rs  groth16_prove_input.json
crates/railgun-rs/graphql/queries/: root.graphql
crates/railgun-rs/graphql/schemas/: railgun.graphql
crates/railgun-rs/src/: builder.rs  caip.rs  chain_config.rs  database.rs  lib.rs  padded_u256.rs  provider.rs
crates/railgun-rs/src/abis/: erc20.rs  mod.rs  railgun.rs
crates/railgun-rs/src/account/: address.rs  signer.rs
crates/railgun-rs/src/circuit/: artifact_loader.rs  groth16_prover.rs  mod.rs  proof.rs  prover.rs  remote_artifact_loader.rs  witness.rs  witness_calculator.rs
crates/railgun-rs/src/crypto/: aes.rs  keys.rs  mod.rs  railgun_base_37.rs  railgun_txid.rs
crates/railgun-rs/src/database/: mod.rs  railgun_db.rs
crates/railgun-rs/src/indexer/: indexed_account.rs  mod.rs  txid_indexer.rs  utxo_indexer.rs
crates/railgun-rs/src/merkle_tree/: smart_wallet_verifier.rs  txid_tree.rs  utxo_tree.rs  verifier.rs
crates/railgun-rs/src/note/: encrypt.rs  operation.rs  transfer.rs  utxo.rs
crates/railgun-rs/src/poi/: client.rs  mod.rs  note.rs  provider.rs  types.rs
crates/railgun-rs/src/railgun/: address.rs  chain.rs  mod.rs  poi_provider.rs  provider.rs  signer.rs
crates/railgun-rs/src/snapshots/: railgun_rs__caip__tests__erc1155_hash_snap.snap  (+2 more)
crates/railgun-ts/: CHANGELOG.md  Cargo.toml  README.md  lib.ts  package.json  tsconfig.json
crates/railgun-ts/sdk/: database.ts  ethereum-provider.ts  lib.ts  logger.ts  plugin.ts  prover-adapter.ts  signer-pool.ts
crates/railgun-ts/src/: builder.rs  caip.rs  chain_config.rs  database.rs  lib.rs  log.rs  provider.rs  railgun_signer.rs  shield_builder.rs  signer.rs  transaction_builder.rs  txid_syncer.rs  utxo_syncer.rs
crates/railgun-ts/tests/: broadcast-utxo.test.ts  plugin-sync.test.ts  plugin-transact-broadcast.test.ts  transact-utxo.test.ts  utils.ts
crates/railgun/benches/: indexed_account.rs
crates/railgun/src/: adapter_data.rs  builder.rs  caip.rs  chain_config.rs  lib.rs  provider.rs  railgun_database.rs
crates/request/: Cargo.toml
crates/request/src/: client.rs  lib.rs  response.rs
crates/sagemaker-proxy/: Cargo.toml
crates/sagemaker-proxy/src/: main.rs
crates/tc-rs/: Cargo.toml  README.md  justfile
crates/tc-rs/src/: lib.rs  merkle.rs  note.rs  tx_data.rs
crates/tc-syncer/: Cargo.toml
crates/tc-syncer/src/: main.rs
crates/tornadocash/: Cargo.toml  README.md  justfile
crates/tornadocash/benches/: merkle.rs  prove.rs  signals.json
crates/tornadocash/src/: lib.rs  merkle.rs  tornado_database.rs
crates/tornadocash/tests/: pool_provider.rs  provider.rs  sync.rs
crates/userop-kit/: Cargo.toml  README.md  build.rs
crates/userop-kit-ts/: Cargo.toml  package.json
crates/userop-kit-ts/src/: bundler.rs  lib.rs  signable_user_operation.rs  signer.rs  simple_smart_account.rs
crates/userop-kit/src/: builder.rs  entry_point.rs  lib.rs  railgun.rs  signable_user_operation.rs  signed_user_operation.rs  user_operation.rs
sagemaker-proxy/: Cargo.toml
sagemaker-proxy/src/: fhe_infer_endpoint.rs
(+694 files in other folders)
