[workspace]
members = [
    "crates/crypto",
    "crates/poseidon-rust",
    "crates/prover",
    "crates/railgun-rs",
    "crates/tc-rs",
]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
alloy = "1.5"
alloy-contract = "1.5"
alloy-sol-types = "1.5"
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
async-trait = "0.1.89"
bech32 = "0.11.1"
blake-hash = { version = "0.2.0", default-features = false }
console_error_panic_hook = "0.1"
crypto = { path = "./crates/crypto" }
criterion = "0.8.2"
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
gloo-timers = "0.3.0"
graphql_client = "0.16.0"
hex = "0.4.3"
insta = { version = "1.46.3", features = ["json"] }
itertools = "0.14.0"
js-sys = "0.3"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
poseidon-rust = { path = "./crates/poseidon-rust" }
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
ruint = "1.17.2"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1.0.149"
serde_with = "3.16.1"
serial_test = "3.3.1"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = "1.49"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tracing-wasm = "0.2"
tsify = "0.5"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
wasmer = "4.4.0"
web-time = "1.1.0"
prover = { path = "./crates/prover" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 6
panic = "abort"
# strip = true
