[workspace]
members = [
    "crates/common",
    "crates/crypto",
    "crates/eth-rpc",
    "crates/poseidon-rust",
    "crates/prover",
    "crates/railgun-rs",
    "crates/request",
    "crates/tc-rs",
]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
aes = "0.8"
aes-gcm = "0.10"
alloy = { version = "1.8", default-features = false, features = [
    "serde",
    "eips",
    "signers",
    "signer-local",
    "sol-types",
    "rpc-types",
    "contract",
    "providers",
] }
ark-bn254 = "0.6"
ark-circom = "0.6"
ark-ff = "0.6"
ark-groth16 = "0.6"
ark-relations = "0.6"
ark-serialize = "0.6"
ark-std = { version = "0.6", features = ["getrandom"] }
async-trait = "0.1.89"
bech32 = "0.11.1"
blake-hash = { version = "0.2.0", default-features = false }
common = { path = "./crates/common" }
console_error_panic_hook = "0.1"
criterion = "0.8.2"
crypto = { path = "./crates/crypto" }
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
eth-rpc = { path = "./crates/eth-rpc" }
futures = "0.3.31"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
hex = "0.4.3"
http = "1.4.0"
insta = { version = "1.46.3", features = ["json"] }
itertools = "0.14.0"
js-sys = "0.3"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
poseidon-rust = { path = "./crates/poseidon-rust" }
prover = { path = "./crates/prover" }
rand = "0.9.2"
rand_chacha = "0.9.0"
request = { path = "./crates/request" }
reqwest = { version = "0.13", default-features = false }
ruint = { version = "1", features = ["serde", "num-bigint", "ark-ff-06"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.149"
serde_with = "3.16.1"
serial_test = "3.3.1"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = "1.49"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tracing-wasm = "0.2"
tsify = "0.5"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
wasmer = "6.1"
web-time = { version = "1.1", features = ["serde"] }
userop_kit = { git = "https://github.com/Robert-MacWha/privacy-paymaster" }
# userop_kit = { path = "../privacy-paymaster/crates/userop_kit" }

[patch.crates-io]
ruint = { git = "https://github.com/Robert-MacWha/ruint" } # Adds ark-fr-06 support

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
