[package]
name = "sagemaker-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
sha3 = "0.10"
anyhow = "1.0.102"
rand.workspace = true
