[package]
name = "aetherweave-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aetherweave = { path = "../aetherweave" }
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
