[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
ruint = { workspace = true }
serde = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true, features = ["futures"] }

[lints]
workspace = true
