[package]
name = "eip-1193-provider"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = ["alloy", "js"]
alloy = ["alloy/network", "alloy/providers"]
js = [
    "dep:tsify",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]

[dependencies]
alloy = { workspace = true, default-features = false }
async-trait = { workspace = true }
common = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]
