[package]
name = "eth-rpc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
alloy = { workspace = true, features = ["network", "providers"] }
async-trait = { workspace = true }
common = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tsify = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[lints]
workspace = true
