[package]
name = "kohaku-db"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
common = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[lints]
workspace = true
