[package]
version = "0.1.0"
edition = "2021"
name = "poseidon-rust"
rust-version = "1.75"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/poseidon-rust"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true, features = ["getrandom"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "poseidon_hash"
harness = false

[lints]
workspace = true
