[package]
name = "sagemaker-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sagemaker = { workspace = true }
aws-sdk-kms = { workspace = true }
ring = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, default-features = false, features = ["rustls-no-provider", "json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
